# MANDOM

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  build-exe.bat  config.example.toml  desktop.py  docker-compose.yml  pyproject.toml  run.py  start-desktop.bat  start-mandom-lan.bat  start-mandom.bat
app/: __init__.py  cli.py  config.py  db.py
app/providers/: __init__.py  base.py  mangadex.py  mangadex_auth.py
app/services/: __init__.py  downloader.py  kobo.py  naming.py  ratelimit.py  secrets.py  updates.py
app/services/export/: __init__.py  cbz.py  kepub.py
app/web/: __init__.py  queue.py  server.py
app/web/static/: app.js  reader.js  styles.css  sw.js
app/web/templates/: account.html  base.html  home.html  index.html  library.html  manga.html  reader.html  settings.html
app/web/templates/partials/: _account_panel.html  _bookmark_button.html  _downloads.html  _grid.html  _kobo_panel.html  _library_grid.html  _manga_card.html  _results.html  _settings_form.html
tools/: make_icons.py
