[project]
name = "manga-downloader-app"
version = "0.1.0"
description = "Personal-use manga downloader: pull English chapters from provider APIs (MangaDex first) and export Kobo-ready files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",        # async HTTP client for provider APIs + image downloads
]

[project.optional-dependencies]
# Pulled in for later phases (KEPUB image processing, web UI). Not needed for the Phase 1 CLI.
export = ["pillow>=10.0"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
manga = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
