[project]
name = "mandom"
version = "0.2.0"
description = "Mandom - a personal-use manga downloader: pull English chapters from provider APIs (MangaDex first) and export Kobo-ready files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",        # async HTTP client for provider APIs + image downloads
]

[project.optional-dependencies]
# Pulled in for the web UI (Phase 2). Not needed for the Phase 1 CLI.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "keyring>=24.0",        # store MangaDex creds in the OS keychain, not plaintext
    "pillow>=10.0",         # image sizing for the Kobo KEPUB exporter
]
# KEPUB image processing (Phase 5).
export = ["pillow>=10.0"]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
mandom = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
